--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tailwind",
+  "name": "matchup",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -37,6 +37,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "tailwindcss": "^3.4.13",
     "typescript": "~5.4.2"
   }
 }
